--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <canvas id="mainCanvas"></canvas>
+    <script src="https://codemaker4.github.io/vec2d/vec2d.js"></script>
     <script src="CodeMakersCanvas.js"></script>
     <script src="main.js"></script>
 </body>
