now using modules

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeMakers Canavs</title>
+    <title>dungeon game</title>
 </head>
 <body style="margin: 0; overflow: hidden;">
     <canvas id="mainCanvas"></canvas>
-    <script src="https://codemaker4.github.io/vec2d/vec2d.js"></script>
-    <script src="CodeMakersCanvas.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="libraries/vec2d.js"></script>
+    <script type="module" src="libraries/CodeMakersCanvas.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
